--- a/src/components/quote-slider/quote-slider.module.scss
+++ b/src/components/quote-slider/quote-slider.module.scss
@@ -122,7 +122,7 @@
                 font-weight: bold;
                 padding-right: 8px;
                 text-transform: uppercase;
-                color: $accent;
+                color: $accent-small-text;
                 margin-bottom: 5px;
                 letter-spacing: 0.15em;
             }
