--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -1,3 +1,6 @@
+// Theme overrides:
+$page-section-title-color: var(--page-section-title-color, $accent);
+
 body {
     font-family: $mainFont;
     font-size: 18px;
@@ -20,7 +23,7 @@ body {
     position: absolute;
     top: 45px;
     left: 0;
-    color: $accent;
+    color: $page-section-title-color;
     font-weight: bold;
     text-transform: lowercase;
 
@@ -34,7 +37,7 @@ body {
         width: 100%;
         height: 2px;
         top: -15px;
-        background: $accent;
+        background: $page-section-title-color;
     }
 }
 
