--- a/src/styles/_themes.scss
+++ b/src/styles/_themes.scss
@@ -2,9 +2,9 @@
 :root {
   --color-primary: #{$dark-blue};
   --color-accent: #{$coral};
+  --color-accent-small: #{$coral-dark};
   --color-link: #{$light-blue};
   --color-link-hover: #{$light-blue};
-  --color-link-badge:white;
 }
 
 .lightTheme {}
@@ -14,6 +14,7 @@
   // Base colors:
   --color-primary: #{#251657};
   --color-accent: #{$green};
+  --color-accent-small: #{$green-dark};
 
   // Hero Component
   --hero-background: #{$primary};
@@ -29,7 +30,12 @@
 
   // Links
   --color-link-hover: white;
-  --color-link-badge: #{$blue};
+
+  // Page section titles
+  --page-section-title-color: #{$green-dark};
+
+  // Phone number
+  --contact-number-color: #{$light-blue};
 
 }
 
